--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,8 @@ python-dotenv==1.0.0
 black==23.3.0
 pre-commit==3.2.2
 Flask==2.2.3
+Flask-Testing==0.8.1
+pytest==7.3.0
+pytest-flask==1.2.0
+pytest-mock==3.10.0
+
